--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-POPCORN_BASE_URL = https://popcorn-nantes.github.io
+POPCORN_BASE_URL = https://{{MON_POPCORN}}.github.io
 POPCORN_SLACK_WEBHOOK = https://xxxxx
 
